manifest/objects/Apttus__WizardStep__c.object
<CustomObject>
    <description>The step that is designed and used in Wizard designs.</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Step within a Wizard Design is Active. Setting Wizard Design as Active automatically activates the included steps.</description>
        <inlineHelpText>Signifies that the Step within a Wizard Design is Active. Setting Wizard Design as Active automatically activates the included steps.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BannerStatement__c</fullName>
        <description>Defaults to Step Design label and is used by the Wizard Step Runtime as the banner.</description>
        <inlineHelpText>Defaults to Step Design label and is used by the Wizard Step Runtime as the banner.</inlineHelpText>
        <label>Banner Statement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Steps</description>
        <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Steps</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Business object context, used to filter and align inputs.</description>
        <inlineHelpText>Business object context, used to filter and align inputs.</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Type of context, whether its All or Object. 
All means that any input can be used in the step design. 
Object means that only aligned (same object) inputs can be used in the step design.</description>
        <inlineHelpText>Type of context, whether its All or Object. 
All means that any input can be used in the step design. 
Object means that only aligned (same object) inputs can be used in the step design.</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Describes the expected use of this step as a designer</description>
        <inlineHelpText>Describes the expected use of this step as a designer</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__EditorView__c</fullName>
        <label>Editor View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input Sequence List</fullName>
                </value>
                <value>
                    <fullName>Input Name</fullName>
                </value>
                <value>
                    <fullName>Input Q / S</fullName>
                </value>
                <value>
                    <fullName>Input Response</fullName>
                </value>
                <value>
                    <fullName>Q / S &amp; Response</fullName>
                </value>
                <value>
                    <fullName>Rule Editors</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Additional field for use in search and selection</description>
        <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Label__c</fullName>
        <description>Label for the Step in Design Time</description>
        <inlineHelpText>Label for the Step in Design Time</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Precedence__c</fullName>
        <description>Denotes what sequence should proceed this step in order to appear. In the form (1) (1 OR 2) (1 AND 2) etc.</description>
        <inlineHelpText>Denotes what sequence should proceed this step in order to appear. In the form (1) (1 OR 2) (1 AND 2) etc.</inlineHelpText>
        <label>Precedence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Repeatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Line Items, Tables</description>
        <inlineHelpText>Line Items, Tables</inlineHelpText>
        <label>Repeatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeDescription__c</fullName>
        <description>Describe what the runtime user can see as a help or instruction description of this Step.</description>
        <inlineHelpText>Describe what the runtime user can see as a help or instruction description of this Step.</inlineHelpText>
        <label>Runtime Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The order in which the screen should be displayed to the user.</description>
        <inlineHelpText>The order in which the screen should be displayed to the user.</inlineHelpText>
        <label>Step Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>Dependent on the category field, whose list values shall allow users to search, find, and select Steps</description>
        <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Steps</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Transient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Step added to a wizard is in Transient state until the Wizard is saved.</description>
        <inlineHelpText>Step added to a wizard is in Transient state until the Wizard is saved.</inlineHelpText>
        <label>Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input Control</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <description>Version number (counter) of step design. This identifies the step uniquely in the chronology of creation.</description>
        <displayFormat>{0000000}.{000}</displayFormat>
        <inlineHelpText>Version number (counter) of step design. This identifies the step uniquely in the chronology of creation.</inlineHelpText>
        <label>Version</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to wizard this step belongs to.</description>
        <inlineHelpText>Lookup to wizard this step belongs to.</inlineHelpText>
        <label>Wizard</label>
        <referenceTo>Apttus__Wizard__c</referenceTo>
        <relationshipName>WizardSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Wizard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Wizard this step belongs to</description>
        <inlineHelpText>The Wizard this step belongs to</inlineHelpText>
        <label>Wizard</label>
        <referenceTo>Apttus__Wizard__c</referenceTo>
        <relationshipName>Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Step (Deprecated)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>